# llvm-project

./: .gitignore
offload/: CMakeLists.txt
offload/DeviceRTL/: CMakeLists.txt
offload/test/: CMakeLists.txt
openmp/diomp/: CMakeLists.txt
openmp/diomp/include/: diomp.h  diompcomm.h  diompmem.h  handlers.h  tools.h
openmp/diomp/src/: diomp.cpp  diompcomm.cpp  diompmem.cpp
